# wit-nats-proxy-gen

./: Cargo.toml  README.md
crates/wit-wasmcloud-messaging-bindgen/: Cargo.toml  README.md
crates/wit-wasmcloud-messaging-bindgen/src/: lib.rs
crates/wit_nats_proxy/: Cargo.toml
crates/wit_nats_proxy/src/: lib.rs
crates/wit_nats_proxy_macros/: README.md
crates/wit_nats_proxy_macros/src/: lib.rs
examples/acme-component/: Cargo.toml
examples/acme-component/.wash/: config.yaml
examples/acme-component/src/: lib.rs
examples/acme-component/wit/: world.wit
examples/acme-provider/: Cargo.toml  README.md
examples/acme-provider/src/: lib.rs
examples/acme-provider/wit/: world.wit
examples/http-hello-world-message/: Cargo.toml
examples/http-hello-world-message/manifests/: workloaddeployment.yaml
examples/http-hello-world-message/src/: lib.rs
examples/http-hello-world-message/wit/: world.wit
src/: lib.rs  wit_nats_proxy.rs
wit_nats_proxy_macros/: Cargo.toml  README.md
wit_nats_proxy_macros/src/: lib.rs
