[package]
name = "acme-component-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.53.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wit_nats_proxy = { path = "../../crates/wit_nats_proxy" }
wit-wasmcloud-messaging-bindgen = { path = "../../crates/wit-wasmcloud-messaging-bindgen" }
